# LuminaryStudio

./: .gitignore  CMakeLists.txt  README.md
resources/shaders/: Render.fs  Render.vs  Update.gs  Update.vs  blur.frag  floor.frag  phong.frag  phong.vert  postprocess.frag  postprocess.vert  skybox.frag  skybox.vert
scenefiles/: display-yellow.json  final-purple.json  final-yellow.json  phy_test.json  test.json
scenefiles/action/extra_credit/shadow/: shadow_special_case.json  simple_shadow.json
scenefiles/action/meshes/: lantern.obj_bottom1  lantern.obj_main  lantern.obj_main1  lantern.obj_pipe
scenefiles/action/required/: display-yellow.json  dynamic_ref.json  final-purple .json  final-yellow.json  final-yellow0.json  final.json  final2.json  final3.json  lanternTest.json  lantern_water.json  lightsTest.json  newLantern.json  new_ref_test.json  phy_test.json  unit_cylinder.json  video_fire.json
scenefiles/action/required/point_light/: point_light_1.json
scenefiles/illuminate/required/shadow/: shadow_test.json
scenefiles/intersect/extra_credit/: lantern.json
src/: cameramove.cpp  floor.cpp  floor.h  fountain.cpp  fountain.h  main.cpp  mainwindow.cpp  mflame.cpp  mflame.h  realtime.cpp  realtime.h  settings.h  shader.h  texture.h
src/camera/: camera.cpp  camera.h
src/shapes/: Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Sphere.cpp  Sphere.h
src/utils/: realtimeutils.cpp  sceneparser.cpp  sceneparser.h  shaderloader.h
unusedresources/lentern_texture/cw2/: premake5.lua  readme.md  third_party.md
unusedresources/lentern_texture/cw2-texture/: INFO.txt
unusedresources/lentern_texture/cw2/main/: defaults.hpp  main.cpp
unusedresources/lentern_texture/cw2/support/: checkpoint.cpp  checkpoint.hpp  debug_output.cpp  debug_output.hpp  error.cpp  error.hpp  program.cpp  program.hpp
unusedresources/lentern_texture/cw2/vmlib/: empty.cpp  mat22.hpp  mat44.hpp  vec2.hpp  vec3.hpp  vec4.hpp
unusedresources/new_lantern/: Sky lantern OBJ.mtl
